--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
@@ -20,9 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textColor="@color/textColorTitle"
-        android:textSize="22sp"
         android:textAllCaps="true"
+        style="@style/TextTitle"
         />
 
     <View
