--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -87,29 +87,26 @@
                     <TextView
                         android:id="@+id/tvPersonalInfo"
                         android:layout_width="match_parent"
-                        android:layout_height="100px"
+                        android:layout_height="50dp"
                         android:background="@color/bgColor"
                         android:gravity="center"
                         android:text="@string/info"
-                        android:textColor="@color/textColor"
-                        android:textSize="38px"/>
+                        style="@style/TextLarge"
+                        android:textStyle="bold"/>
 
                     <EditText
                         android:id="@+id/editTextUserName"
                         android:layout_width="match_parent"
-                        android:layout_height="80px"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="40px"
-                        android:layout_marginStart="40px"
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="20dp"
+                        android:layout_marginStart="20dp"
                         android:background="#0000"
                         android:hint="@string/name"
                         android:inputType="textCapWords"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:textColor="@color/textColor"
-                        android:textColorHint="@color/textColorLight"
                         android:textCursorDrawable="@null"
-                        android:textSize="32px"/>
+                        style="@style/TextNormal"/>
 
                     <ImageView
                         android:layout_width="match_parent"
@@ -137,11 +134,8 @@
                             android:paddingEnd="5dp"
                             android:paddingStart="5dp"
                             android:paddingTop="8dp"
-                            android:tag="@string/dont_touch_me"
                             android:text=""
-                            android:textColor="@color/textColor"
-                            android:textColorHint="@color/textColorLight"
-                            android:textSize="16sp"
+                            style="@style/TextNormal"
                             />
 
                         <EditText
@@ -149,7 +143,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_centerVertical="true"
-                            android:layout_marginStart="5px"
+                            android:layout_marginStart="2dp"
                             android:layout_toEndOf="@+id/tvCountryCode"
                             android:layout_toStartOf="@+id/imageViewEditPhone"
                             android:background="#0000"
@@ -157,10 +151,8 @@
                             android:inputType="number"
                             android:maxLength="14"
                             android:singleLine="true"
-                            android:textColor="@color/textColor"
-                            android:textColorHint="@color/textColorLight"
                             android:textCursorDrawable="@null"
-                            android:textSize="32px"/>
+                            style="@style/TextNormal"/>
 
                         <ImageView
                             android:id="@+id/imageViewEditPhone"
@@ -200,12 +192,11 @@
                     <TextView
                         android:id="@+id/tvAccountDetails"
                         android:layout_width="match_parent"
-                        android:layout_height="100px"
+                        android:layout_height="50dp"
                         android:background="@color/bgColor"
                         android:gravity="center"
                         android:text="@string/account_details"
-                        android:textColor="@color/textColor"
-                        android:textSize="38px"
+                        style="@style/TextLarge"
                         />
 
 
@@ -224,25 +215,24 @@
                                 android:id="@+id/tvAccNoText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginStart="40px"
+                                android:layout_marginStart="20dp"
                                 android:background="#0000"
                                 android:textAllCaps="true"
                                 android:text="@string/acc_no"
                                 android:textColor="@color/textColorMedium"
-                                android:textSize="32px"
+                                style="@style/TextNormal"
                                 android:gravity="center_vertical"
                                 />
 
                             <TextView
                                 android:id="@+id/tvAccNo"
-                                android:layout_width="380px"
+                                android:layout_width="190dp"
                                 android:layout_height="match_parent"
                                 android:layout_alignParentEnd="true"
-                                android:layout_marginEnd="40px"
+                                android:layout_marginEnd="20dp"
                                 android:gravity="end|center_vertical"
                                 android:hint="@string/acc_no"
-                                android:textColor="@color/textColor"
-                                android:textSize="32px"/>
+                                style="@style/TextNormal"/>
 
 
                         </RelativeLayout>
@@ -263,23 +253,22 @@
                                 android:id="@+id/tvIFSCText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginStart="40px"
+                                android:layout_marginStart="20dp"
                                 android:text="@string/ifsc_code"
                                 android:textColor="@color/textColorMedium"
-                                android:textSize="32px"
+                                style="@style/TextNormal"
                                 android:gravity="center_vertical"
                                 />
 
                             <TextView
                                 android:id="@+id/textViewIFSC"
-                                android:layout_width="380px"
+                                android:layout_width="190dp"
                                 android:layout_height="match_parent"
                                 android:layout_alignParentEnd="true"
-                                android:layout_marginEnd="40px"
+                                android:layout_marginEnd="20dp"
                                 android:gravity="end|center_vertical"
                                 android:hint="@string/acc_no"
-                                android:textColor="@color/textColor"
-                                android:textSize="32px"/>
+                                style="@style/TextNormal"/>
 
 
                         </RelativeLayout>
@@ -299,22 +288,21 @@
                                 android:id="@+id/tvBankNameText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginStart="40px"
+                                android:layout_marginStart="20dp"
                                 android:text="@string/bank_name"
                                 android:textColor="@color/textColorMedium"
                                 android:gravity="center_vertical"
-                                android:textSize="32px"/>
+                                style="@style/TextNormal"/>
 
                             <TextView
                                 android:id="@+id/textViewBankName"
-                                android:layout_width="380px"
+                                android:layout_width="190dp"
                                 android:layout_height="match_parent"
                                 android:layout_alignParentEnd="true"
-                                android:layout_marginEnd="40px"
+                                android:layout_marginEnd="20dp"
                                 android:gravity="end|center_vertical"
                                 android:hint="Bank name"
-                                android:textColor="@color/textColor"
-                                android:textSize="32px"/>
+                                style="@style/TextNormal"/>
 
 
                         </RelativeLayout>
@@ -334,22 +322,21 @@
                                 android:id="@+id/tvBankLocText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_marginStart="40px"
+                                android:layout_marginStart="20dp"
                                 android:text="@string/bank_loc"
                                 android:textColor="@color/textColorMedium"
-                                android:textSize="32px"
+                                style="@style/TextNormal"
                                 android:gravity="center_vertical"/>
 
                             <TextView
                                 android:id="@+id/textViewBankLoc"
-                                android:layout_width="380px"
+                                android:layout_width="190dp"
                                 android:layout_height="match_parent"
                                 android:layout_alignParentEnd="true"
-                                android:layout_marginEnd="40px"
+                                android:layout_marginEnd="20dp"
                                 android:gravity="end|center_vertical"
                                 android:hint="@string/bank_loc"
-                                android:textColor="@color/textColor"
-                                android:textSize="32px"/>
+                                style="@style/TextNormal"/>
 
 
                         </RelativeLayout>
