--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_transaction_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_transaction_item.xml
@@ -20,8 +20,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="27 Feb, 2015"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/text_size_16_sp" />
+                style="@style/TextNormal"
+                />
 
             <TextView
                 android:id="@+id/textViewTransactionTime"
@@ -29,8 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="12:00 PM"
-                android:textColor="@color/text_color_light"
-                android:textSize="13.5sp" />
+                style="@style/TextMedium" />
 
             <TextView
                 android:id="@+id/tv_payment_type"
@@ -38,8 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
                 android:text="Office Recharge"
-                android:textColor="@color/text_color_light"
-                android:textSize="11sp" />
+                style="@style/TextSmall" />
 
 
         </LinearLayout>
@@ -60,8 +58,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:text="Rs. 100"
-                android:textColor="@color/text_color"
-                android:textSize="@dimen/text_size_16_sp" />
+                style="@style/TextNormal" />
 
 
             <TextView
@@ -71,8 +68,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:text="Cash Added"
-                android:textColor="@color/text_color_light"
-                android:textSize="11sp" />
+                style="@style/TextSmall" />
 
         </LinearLayout>
 
@@ -82,7 +78,7 @@
             android:layout_alignParentBottom="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/stroke_color_light" />
+            android:background="@color/dividerColor" />
 
     </RelativeLayout>
 
