--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_search_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_search_item.xml
@@ -56,7 +56,7 @@
         android:layout_height="2px"
         android:layout_marginStart="2px"
         android:layout_marginEnd="2px"
-        android:background="@color/stroke_color_light"
+        android:background="@color/dividerColor"
         android:layout_alignParentBottom="true"
         />
 
