--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -165,8 +165,10 @@
 
     <color name="dialog_border_color">#AA7E7D78</color>
     <color name="instataxi_yellow">#F8CE00</color>
-  <!--  <color name="gradient_orange_v2">#ff8162</color>
-    <color name="gradient_yellow_v2">#f8b542</color>-->
+    <color name="bgColor">#f2f2f2</color>
+
+    <!--  <color name="gradient_orange_v2">#ff8162</color>
+      <color name="gradient_yellow_v2">#f8b542</color>-->
 
 
 
