--- a/JugnooNewDriver/jugnooNewDriver/src/white/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/white/res/values/values-wl.xml
@@ -71,7 +71,7 @@
 
     <!--General Features Enable/Disable-->
     <bool name="show_support_ride_detail">false</bool>  <!--For Ticketing-->
-    <integer name="show_language_control">@integer/view_visible</integer>
+    <integer name="show_language_control">@integer/view_gone</integer>
     <integer name="show_call_in_otp">@integer/view_gone</integer>
 
 
