--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/frag_login.xml
@@ -100,6 +100,7 @@
             app:layout_constrainedWidth="true"
             android:text="@string/label_edt_phone"
             android:textSize="17sp"
+            android:textColor="@color/colorLight"
             android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@+id/backgroundPhone"
             app:layout_constraintEnd_toEndOf="@+id/backgroundPhone"
