--- a/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/ttrides/res/values/values-wl.xml
@@ -79,5 +79,38 @@
     <integer name="like_us_on_fb_enabled">@integer/view_visible</integer>
     <bool name="use_fugu_key_hardcode">true</bool>
 
+    <drawable name="bg_splash">@color/colorPrimaryDark</drawable>
+    <color name="colorDark">@color/text_color</color>
+    <color name="colorLight">@color/white</color>
+
+    <!--theme colors-->
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="textColorTitle">#000000</color>
+    <color name="textColor">#000000</color>
+    <color name="textColorMedium">#333333</color>
+    <color name="textColorLight">#9b9b9b</color>
+    <color name="textColorButton">#FFFFFF</color>
+    <color name="dividerColor">#dbdbdb</color>
+    <color name="themeColor">#CC3333</color>
+    <color name="themeColorLight">#bbCC3333</color>
+    <color name="themeColorAlternate">#3c3638</color>
+    <color name="themeColorAlternateLight">#bb3c3638</color>
+
+
+    <!--resValue "color", 'red_v2', "#000000"-->
+    <!--resValue "color", 'red_v2_fadded', "#90000000"-->
+    <!--resValue "color", 'theme_color', "#000000"-->
+    <!--resValue "color", 'theme_color_alpha', "#BB000000"-->
+    <!--resValue "color", 'document_text_color', "#99000000"-->
+    <!--resValue "color", 'new_orange', "#CC3333"-->
+    <!--resValue "color", 'orange_btn_pressed', "#90CC3333"-->
+    <!--resValue "color", 'musturd_jugnoo', "#000000"-->
+    <!--resValue "color", 'gradient_yellow_v2', "#CC3333"-->
+    <!--resValue "color", 'gradient_orange_v2', "#CC3333"-->
+    <!--resValue "color", 'app_background_color', "#000000"-->
+    <!--resValue "color", 'orange_dark', "#CC3333"-->
+    <!--resValue "color", 'black_earnings_bg', "#000000"-->
+    <!--resValue "color", 'black_top_bar_bg', "#000000"-->
 
 </resources>
