--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -115,31 +115,33 @@
 
         <Button
             android:id="@+id/bContinue"
-            android:layout_width="146dp"
-            android:layout_height="42dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/orange_btn_selector"
             android:text="@string/continue_text"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:layout_marginStart="10dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rvVehicleTypes"
-            />
+            app:layout_constraintStart_toEndOf="@+id/bCancel"
+            app:layout_constraintTop_toBottomOf="@+id/rvVehicleTypes" />
 
         <Button
             android:id="@+id/bCancel"
-            android:layout_width="146dp"
-            android:layout_height="42dp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="10dp"
             android:background="@drawable/menu_black_btn_selector"
             android:text="@string/cancel"
             android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="16sp"
-            app:layout_constraintTop_toBottomOf="@+id/rvVehicleTypes"
-            />
-
+            app:layout_constraintEnd_toStartOf="@+id/bContinue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/rvVehicleTypes" />
         <TextView
             android:id="@+id/tvTermsOfUse"
             android:layout_width="match_parent"
