--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
@@ -14,7 +14,7 @@
         style="@style/BackArrow"
         />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,7 +22,10 @@
         android:gravity="center"
         android:textColor="@color/textColorTitle"
         android:textSize="22sp"
+        android:autoSizeTextType="uniform"
         android:textAllCaps="true"
+        android:layout_toEndOf="@+id/backBtn"
+        android:layout_alignParentEnd="true"
         />
 
     <View
