--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_otp_confrim.xml
@@ -70,7 +70,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:gravity="center"
-                            android:text=""
+                            android:textDirection="ltr"
+                            android:text="+91 8859888755"
                             android:textColor="@color/black_text_v2"
                             android:textSize="@dimen/text_size_32" />
 
