--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -136,12 +136,11 @@
                             android:paddingBottom="8dp"
                             android:paddingEnd="5dp"
                             android:paddingStart="5dp"
-                            android:paddingTop="8dp"
-                            android:tag="@string/dont_touch_me"
-                            android:text=""
+                            android:paddingTop="7dp"
+                            android:text="+91"
                             android:textColor="@color/textColor"
                             android:textColorHint="@color/textColorLight"
-                            android:textSize="16sp"
+                            android:textSize="30px"
                             />
 
                         <EditText
@@ -156,6 +155,7 @@
                             android:hint="@string/phone_number"
                             android:inputType="number"
                             android:maxLength="14"
+                            android:text="8859888755"
                             android:singleLine="true"
                             android:textColor="@color/textColor"
                             android:textColorHint="@color/textColorLight"
