--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_home_top_bar.xml
@@ -87,6 +87,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="7dp"
             android:layout_marginTop="4dp"
+            android:layout_centerVertical="true"
             android:gravity="center_vertical"
             android:tag="@string/dont_touch_me"
             >
