--- a/JugnooNewDriver/jugnooNewDriver/src/pamdrive/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/pamdrive/res/values/values-wl.xml
@@ -16,28 +16,27 @@
     -->
 
 
-    <string name="appname">Hezz</string>
-    <string name="app_name">Hezz Drivers</string>
+    <string name="appname">PamDrive</string>
+    <string name="app_name">PamDrive Drivers</string>
 
     <!--White Label Key-->
-    <string name="white_label_key">1ac6f54692c22e08ab9ddd9c383ff0a3</string>
+    <string name="white_label_key">99f30666b06f54717b21328fcd5a0c7c</string>
 
-    <string name="fugu_app_key">5272bed2276ac0c2fe3cdc2bfb5723c1</string>
+    <string name="fugu_app_key">vdfvvbdfgb786347823vhjdvwfjcvj</string>
     <string name="fugu_app_key_test">kenwfdhwoiujGSDIUUHU82E8HD98</string>
-    <string name="images_path">Hezz Driver/Hezz Pictures</string>
-    <string name="file_provider">production.hezz.driver.provider</string>
-    <string name="google_maps_api_key">AIzaSyALkY1H6pkL8WN2HFttCNSC7s15wOhB4d8</string> <!--IMP-->
+    <string name="images_path">PamDrive Driver/PamDrive Pictures</string>
+    <string name="file_provider">production.pamdrive.driver.provider</string>
+    <string name="google_maps_api_key">AIzaSyD1NROD8yHHbHyOJ1vPg0D7iZIqP0s9tiE</string> <!--IMP-->
 
 
     <!--App Level Constants-->
     <drawable name="app_icon">@mipmap/ic_launcher</drawable><!--* IMP-->
-    <string name="white_label_name">HEZZ</string><!--* IMP-->
-    <string name="support_email">support@hezz.ma</string>
-    <string name="support_email_subject">Hezz Driver Support</string>
+    <string name="white_label_name">PAMDRIVE</string><!--* IMP-->
+    <string name="support_email">support@pamdrive.in</string>
+    <string name="support_email_subject">PamDrive Driver Support</string>
     <string name="support_phone_number">+919023121121</string>
-    <string name="customer_app_download_link">https://www.jugnoo.in/</string>
+    <string name="customer_app_download_link">https://www.pamdrive.in/</string>
     <string name="hippo_support_faq_name_default">Driver</string>
-    <integer name="show_t_and_c">@integer/view_visible</integer>
 
     <!--Notifications-->
     <drawable name="ic_notification_big_drawable">@drawable/app_icon</drawable>
@@ -47,8 +46,8 @@
 
 
     <!--Login sign-up -->
-    <drawable name="bg_on_boarding_drawable">@color/white</drawable>
-    <drawable name="buttons_on_boarding_drawable">@drawable/background_translucent_white_rounded_orange_bordered</drawable>
+    <drawable name="bg_on_boarding_drawable">@color/instataxi_yellow</drawable>
+    <drawable name="buttons_on_boarding_drawable">@drawable/button_bg_gradient</drawable>
     <drawable name="ic_splash_logo_drawable">@drawable/ic_splash_logo</drawable> <!--400 * 400 px MAX--> <!--* IMP-->
 
 
@@ -58,6 +57,7 @@
     <integer name="show_invoices">@integer/view_visible</integer>
     <integer name="show_driver_resources">@integer/view_visible</integer>
     <integer name="show_refer_earn">@integer/view_visible</integer>
+    <integer name="show_t_and_c">@integer/view_visible</integer>
 
 
     <!--Profile Screen-->
@@ -67,14 +67,23 @@
 
     <!--General Features Enable/Disable-->
     <bool name="show_support_ride_detail">true</bool>  <!--For Ticketing-->
+    <bool name="waze_navigation_enabled">true</bool>
     <integer name="show_language_control">@integer/view_gone</integer>
     <integer name="show_call_in_otp">@integer/view_visible</integer>
-    <integer name="show_driver_timer">@integer/view_invisible</integer>
-    <bool name="use_fugu_key_hardcode">true</bool>
-    <string name="facebook_page_id">1497119970363540</string>
-    <string name="facebook_page_name">Hezzmaroc</string>
-    <integer name="like_us_on_fb_enabled">@integer/view_visible</integer>
 
-    <color name="themeColor">#CF312F</color>
-    <color name="themeColorLight">#bbCF312F</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="textColorTitle">#000000</color>
+    <color name="textColor">#000000</color>
+    <color name="textColorMedium">#333333</color>
+    <color name="textColorLight">#9b9b9b</color>
+    <color name="textColorButton">#FFFFFF</color>
+    <color name="dividerColor">#dbdbdb</color>
+    <color name="themeColor">#CC3333</color>
+    <color name="themeColorLight">#bbCC3333</color>
+    <color name="themeColorAlternate">#3c3638</color>
+    <color name="themeColorAlternateLight">#bb3c3638</color>
+
+
+
 </resources>
