--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_cancel_ride.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_cancel_ride.xml
@@ -6,40 +6,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-
-    <RelativeLayout
-        android:id="@+id/topBar"
-        android:layout_width="720px"
-        android:layout_height="96px">
-
-
-        <TextView
-            android:id="@+id/textViewTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="25px"
-            android:text="@string/cancel_ride"
-            android:textColor="@color/black"
-            android:textSize="36px"/>
-
-        <ImageView
-            android:id="@+id/imageViewBack"
-            android:layout_width="60.7px"
-            android:layout_height="76.9px"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10px"
-            android:padding="20px"
-            android:layout_marginTop="25px"
-            android:src="@drawable/arrow"
-            android:rotationY="@integer/locale_mirror_flip"
-            />
-    </RelativeLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="6px"
-        android:background="@drawable/shadow_down"
-        />
+    <include layout="@layout/layout_top_bar"/>
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -51,7 +18,7 @@
         <LinearLayout
             android:id="@+id/linearLayoutMain"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:splitMotionEvents="false"
             android:animateLayoutChanges="true"
@@ -62,9 +29,9 @@
                 android:id="@+id/listViewCancelOptions"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40px"
+                android:layout_marginTop="20dp"
                 android:divider="@color/transparent"
-                android:dividerHeight="10px"
+                android:dividerHeight="4dp"
                 android:splitMotionEvents="false">
             </product.clicklabs.jugnoo.driver.utils.NonScrollListView>
 
@@ -75,8 +42,9 @@
                 android:layout_width="300dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:text="@string/ok"
-                android:textSize="16dp"
+                android:textSize="16sp"
                 />
 
 
