--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earnings_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earnings_new.xml
@@ -8,7 +8,7 @@
         android:id="@+id/relativeLayoutOrange"
         android:layout_width="252px"
         android:layout_height="match_parent"
-        android:background="@color/new_orange_op_30"
+        android:background="@color/themeColorLight"
         android:layout_alignParentEnd="true">
 
     </RelativeLayout>
