--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_driver_info_update.xml
@@ -73,7 +73,8 @@
 
         <TextView
             android:id="@+id/tvSelectVehicle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/select_vehicle_type"
@@ -84,15 +85,15 @@
 
         <TextView
             android:id="@+id/tvCities"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:paddingRight="5dp"
             android:paddingLeft="5dp"
-            app:layout_constraintHorizontal_bias="0.95"
-            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="end"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBaseline_toBaselineOf="@id/tvSelectVehicle"
-            app:layout_constraintLeft_toRightOf="@id/tvSelectVehicle"
+            app:layout_constraintStart_toEndOf="@id/tvSelectVehicle"
             android:text="@string/label_select_city"
             android:clickable="true"
             android:focusable="true"
@@ -100,6 +101,13 @@
             android:textSize="16sp"
             app:layout_constraintTop_toBottomOf="@+id/editTextName"
             />
+
+        <android.support.constraint.Barrier
+            android:id="@+id/barrierCityLabel"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="tvSelectVehicle,tvCities"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvVehicleTypes"
@@ -110,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/background_white_rounded_grey_alpha_bordered"
-            app:layout_constraintTop_toBottomOf="@+id/tvSelectVehicle" />
+            app:layout_constraintTop_toBottomOf="@+id/barrierCityLabel" />
 
 
         <Button
