--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/chat_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/chat_item.xml
@@ -69,14 +69,14 @@
         android:id="@+id/layout_me"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20px"
+        android:layout_marginTop="10dp"
         android:visibility="visible">
 
         <RelativeLayout
-            android:layout_width="420px"
+            android:layout_width="210dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="32px"
+            android:layout_marginStart="16dp"
             android:layout_toStartOf="@+id/triangle_me"
             android:background="@drawable/bg_msg_me">
 
@@ -106,23 +106,23 @@
 
         <ImageView
             android:id="@+id/triangle_me"
-            android:layout_width="32px"
-            android:layout_height="32px"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginEnd="32px"
-            android:layout_marginTop="10px"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="5dp"
             android:tag="mwar"
             android:src="@drawable/triangle_me" />
 
         <ImageView
             android:id="@+id/usr_icon_me"
-            android:layout_width="100px"
-            android:layout_height="100px"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="8px"
+            android:layout_marginStart="4dp"
             android:tag="mwar"
             android:visibility="gone"
-            android:layout_marginEnd="32px"
+            android:layout_marginEnd="16dp"
             android:src="@drawable/profile_placeholder" />
     </RelativeLayout>
 
