--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_current_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_current_details.xml
@@ -19,8 +19,7 @@
             android:id="@+id/label_credits"
             android:text="@string/total_credits_earned"
             android:layout_width="wrap_content"
-            android:textColor="@color/textColor"
-            android:textSize="17sp"
+            style="@style/TextNormal"
             android:layout_height="wrap_content" />
 
 
@@ -28,9 +27,8 @@
             android:id="@+id/tv_credits_value"
             android:layout_width="wrap_content"
             android:layout_toEndOf="@id/label_credits"
-            android:textColor="@color/textColor"
             android:layout_marginBottom="5dp"
-            android:textSize="17sp"
+            style="@style/TextNormal"
             android:gravity="end"
             android:layout_alignParentEnd="true"
             android:layout_height="wrap_content"
@@ -40,20 +38,18 @@
             android:id="@+id/label_comission"
             android:layout_below="@id/tv_credits_value"
             android:text="@string/commission_saved"
-            android:textSize="15sp"
+            style="@style/TextMedium"
             android:layout_width="wrap_content"
-            android:textColor="@color/textColorLight"
             android:layout_height="wrap_content" />
 
 
         <TextView
             android:id="@+id/tv_comission_value"
             android:layout_width="wrap_content"
-            android:layout_toRightOf="@id/label_credits"
-            android:textColor="@color/textColorLight"
-            android:layout_alignParentRight="true"
-            android:textSize="15sp"
-            android:gravity="right"
+            android:layout_toEndOf="@id/label_credits"
+            android:layout_alignParentEnd="true"
+            style="@style/TextMedium"
+            android:gravity="end"
             android:layout_below="@id/tv_credits_value"
             android:layout_height="wrap_content"
             tools:text = "50" />
@@ -74,10 +70,9 @@
         android:padding="10dp"
         android:layout_marginBottom="1dp"
         android:text="@string/earn_more_credits"
-        android:textColor="@color/textColor"
         android:background="@drawable/bg_white_grey_light_selector"
         android:layout_width="match_parent"
-        android:textSize="17sp"
+        style="@style/TextNormal"
         android:layout_height="wrap_content" />
 
     <TextView
@@ -86,8 +81,7 @@
         android:padding="10dp"
         android:background="@drawable/bg_white_grey_light_selector"
         android:text="@string/share_your_credits"
-        android:textColor="@color/textColor"
-        android:textSize="17sp"
+        style="@style/TextNormal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
