--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_chat_suggestion.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_chat_suggestion.xml
@@ -4,7 +4,7 @@
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
-              android:padding="4px"
+              android:padding="2dp"
               android:splitMotionEvents="false">
 
     <LinearLayout
@@ -14,12 +14,12 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_marginStart="9px"
-        android:layout_marginEnd="9px"
-        android:paddingStart="22px"
-        android:paddingEnd="22px"
-        android:paddingTop="12px"
-        android:paddingBottom="14px"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="5dp"
+        android:paddingStart="11dp"
+        android:paddingEnd="11dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
         android:splitMotionEvents="false" >
 
         <TextView
@@ -28,8 +28,7 @@
             android:layout_height="wrap_content"
             android:text="yes"
             android:gravity="center"
-            android:textColor="@color/black"
-            android:textSize="32px"
+            style="@style/TextNormal"
             />
     </LinearLayout>
 
